add network layer

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+#parametrs
+API_KEY = "d8d3076ff036fa3e92cce8cc95716d46"
+API_URL = "https://api.openweathermap.org/data/2.5/forecast/"
