--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,10 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "API_KEY", API_KEY
+        buildConfigField "String", "API_URL", API_URL
     }
 
     buildTypes {
